# chatting

./: .env.dev  Cargo.toml  README.md  build.rs  compose.yml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml
migrations/: 1_init_user.sql
proto/: chatting.proto  id.proto  message.proto  user.proto
schema/: Cargo.toml  build.rs
schema/src/: lib.rs
src/: error.rs  lib.rs  main.rs  prelude.rs  router.rs  user.rs
src/router/: grpc.rs  user.rs
src/user/: error.rs  grpc.rs  svc.rs
