[workspace]
resolver = "2"
members = ["./.", "./schema"]

[workspace.package]
edition = "2024"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
axum.version = "0.8.3"
axum.features = ["http2"]
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server-auto", "server-graceful", "service"] }
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx.version = "0.8.3"
sqlx.features = ["mysql", "runtime-tokio", "tls-rustls", "chrono", "uuid"]
thiserror = "2.0.12"
tonic.version = "0.14.2"
tonic.default-features = false
tonic.features = ["codegen", "channel"]
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-types = "0.14.2"
tonic-web = "0.13.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "steer"] }
tower-http = { version = "0.6.2", features = ["trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }

schema.path = "./schema"

[package]
name = "chatting"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-types.workspace = true
tonic-web.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

schema.workspace = true
